# fast-vite-todo-ai

./: .pre-commit-config.yaml  .tool-versions  LICENSE  README.md
api/: main.py  pyproject.toml
api/app/: api.py
backend/: main.py  pyproject.toml
backend/app/: main.py  scheduler.py
backend/app/core/: config.py  db.py  redis.py
backend/app/modules/: models.py  routers.py
backend/app/modules/todo/: api.py  model.py  schema.py
backend/migrations/models/: 0_20250818193941_init.py
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Todos.tsx
ui/: package-lock.json  package.json
ui/src/components/: Todos.tsx
