[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Rizki Perdana",email = "perdana.rizki16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "tortoise-orm (>=0.25.1,<0.26.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
